--- a/es5-javascript高级程序设计（第三版）/5/5.2Array类型/5.2.6操作方法.html
+++ b/es5-javascript高级程序设计（第三版）/5/5.2Array类型/5.2.6操作方法.html
@@ -27,7 +27,26 @@
     //删除 可以删除任意数量的项，只需指定2个参数 ：要删除的第一项的位置和要删除的项数。splice(0,2) 会删除数组中前两项
 
     //插入：可以想指定位置插入任意数量的项，只需提供3个参数：起始位置、0（要删除的项数）和要插入的项。如果要插入多个项，可以再传4 5 ... 多个项
-    //例如 splice(2 ,0 ,'red','green')
+    //例如 splice(2 ,0 ,'red','green') 会从当前数组的位置2 开始插入  'red' 'green'
+
+    //替换：可以向指定位置插入任意数量的项，且同时删除任意数量的项，splice(起始位置，要删除的数量，要插入的任意数量的项)
+    //插入的项数不必与删除的项数相等  例如 splice(2,1,'red','green') 从位置2删除1项，并插入red green
+
+
+    //splice 方法始终都会返回一个数组，该数组中包含从原始数组中删除的项（如果没有删除任何项，则返回一个空数组）
+
+    var colors = ['red','green','blue'];
+    var removed = colors.splice(0,1); //删除第一项
+    alert(colors);//green blue
+    alert(removed)//red
+
+    removed = colors.splice(1,0,'yellow','orange'); //
+    alert(colors);//green yellow orange  blue
+    alert(removed)//[] 空数组
+    removed = colors.splice(1,1,'red','purple')
+    alert(colors);//green red purple orange blue
+    alert(removed);//yellow ,返回的数组中只包含一项
+
 
 
 
