--- a/es5-javascript高级程序设计（第三版）/5/5.2Array类型/5.2.6操作方法.html
+++ b/es5-javascript高级程序设计（第三版）/5/5.2Array类型/5.2.6操作方法.html
@@ -10,7 +10,7 @@
 <script>
     //concat(） 基于当前数组中的所有项创建一个新数组。
     var colors  = ['red','green','blue'];
-    var colors2 = colors.concat('yellow',['black','brown'])
+    var colors2 = colors.concat('yellow',['black','brown']);
     alert(colors);//red,green,blue
     alert(colors2);//red,green,blue,yellow,black,brown
 
