--- a/es5-javascript高级程序设计（第三版）/5/5.4 RegExp类型/5.4.2 RegExp实例方法.html
+++ b/es5-javascript高级程序设计（第三版）/5/5.4 RegExp类型/5.4.2 RegExp实例方法.html
@@ -1,12 +1,95 @@
-    A   ·DOCTYPE html>
+A   ·DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>5.4.1 RegExp实例方法</title>
+    <title>5.4.2 RegExp实例方法</title>
 </head>
 <body>
 
 </body>
+
 <script>
-`   `       </script>
+    /*
+    RegExp 对象的主要方法是 exec()，该方法是专门为捕获组而设计的。
+       exec()接受一个参数，即要应用模式的字符串
+        return 包含第一个匹配项信息的数组  没有匹配项的情况下返回 null。
+               返回的数组虽然是 Array 的实例，但包含两个额外的属性：index 和 input。
+               index 表示匹配项在字符串中的位置
+               input 表示应用正则表达式的字符串。
+               在数组中，
+               第一项是与整个模式匹配的字符串，其他项是与模式中的捕获组匹配的字符串（如果模式中没有捕获组，则该数组只包含一项）。
+     */
+
+    var text = "mom and dad and baby";
+    var pattern = /mom( and dad( and baby)?)?/gi; //模式包含两个捕获组。最内部的捕获组匹配"and baby"，而包含它的捕获组匹配"and dad"或者"and dad and baby"
+    var matches = pattern.exec(text);
+    console.log(matches.index); // 0  因为整个字符串本身与模式匹配，所以返回的数组 matchs 的 index 属性值为 0
+    console.log(matches.input); // "mom and dad and baby"
+    //数组中的第一项是匹配的整个字符串，第二项包含与第一个捕获组匹配的内容，第三项包含与第二个捕获组匹配的内容。
+    console.log(matches[0]); // "mom and dad and baby"
+    console.log(matches[1]); // " and dad and baby"
+    console.log(matches[2]); // " and baby"
+
+</script>
+
+<script>
+    /*
+    对于 exec()方法而言，即使在模式中设置了全局标志（g），它每次也只会返回一个匹配项。在不
+    设置全局标志的情况下，在同一个字符串上多次调用 exec()将始终返回第一个匹配项的信息。而在设
+    置全局标志的情况下，每次调用 exec()则都会在字符串中继续查找新匹配项，如下面的例子所示。
+
+     */
+    var text = "cat, bat, sat, fat";
+    var pattern1 = /.at/;
+    var matches = pattern1.exec(text);
+    console.log(matches.index); //0
+    console.log(matches[0]); //cat
+    console.log(pattern1.lastIndex); //0
+    matches = pattern1.exec(text);
+    console.log(matches.index); //0
+    console.log(matches[0]); //cat
+    console.log(pattern1.lastIndex); //0
+    var pattern2 = /.at/g;
+    var matches = pattern2.exec(text);
+    console.log(matches.index); //0
+    console.log(matches[0]); //cat
+    console.log(pattern2.lastIndex); //3
+    matches = pattern2.exec(text);
+    console.log(matches.index); //5
+    console.log(matches[0]); //bat
+    console.log(pattern2.lastIndex); //8
+    /*
+    这个例子中的第一个模式 pattern1 不是全局模式，因此每次调用 exec()返回的都是第一个匹配
+    项（"cat"）。而第二个模式 pattern2 是全局模式，因此每次调用 exec()都会返回字符串中的下一个
+    匹配项，直至搜索到字符串末尾为止。此外，还应该注意模式的 lastIndex 属性的变化情况。在全局
+匹配模式下，lastIndex 的值在每次调用 exec()后都会增加，而在非全局模式下则始终保持不变。
+(IE 的 JavaScript 实现在 lastIndex 属性上存在偏差，即使在非全局模式下，
+lastIndex 属性每次也会变化。)
+
+     */
+
+</script>
+
+<script>
+    /*
+    正则表达式的第二个方法是 test()，它接受一个字符串参数。在模式与该参数匹配的情况下返回
+true；否则，返回 false。在只想知道目标字符串与某个模式是否匹配，但不需要知道其文本内容的
+情况下，使用这个方法非常方便。因此，test()方法经常被用在 if 语句中，
+
+     */
+    var text = "000-00-0000";
+    var pattern = /\d{3}-\d{2}-\d{4}/;  // 3 位   2位  4位
+    if (pattern.test(text)){
+        console.log("The pattern was matched.");
+    }
+
+    /*
+        RegExp 实例继承的 toLocaleString()和 toString()方法都会返回正则表达式的字面量，与创
+        建正则表达式的方式无关。例如：
+     */
+    var pattern = new RegExp("\\[bc\\]at", "gi");
+    console.log(pattern.toString()); //     /\[bc\]at/gi
+    console.log(pattern.toLocaleString()); //     /\[bc\]at/gi
+</script>
+
 </html>
