--- a/es5-javascript高级程序设计（第三版）/5/5.5 Function 类型/5.5.4 函数内部属性.html
+++ b/es5-javascript高级程序设计（第三版）/5/5.5 Function 类型/5.5.4 函数内部属性.html
@@ -48,14 +48,43 @@
     alert(factorial(5)); //0
 
 
-//
-//     函数内部的另一个特殊对象是 this，其行为与 Java 和 C#中的 this 大致类似。换句话说，this
-//     引用的是函数据以执行的环境对象——或者也可以说是 this 值（当在网页的全局作用域中调用函数时，
-// this 对象引用的就是 window）。来看下面的例子。
+    //
+    //     函数内部的另一个特殊对象是 this，其行为与 Java 和 C#中的 this 大致类似。换句话说，this
+    //     引用的是函数据以执行的环境对象——或者也可以说是 this 值（当在网页的全局作用域中调用函数时，
+    // this 对象引用的就是 window）。来看下面的例子。
+    window.color = "red";
+    var o = {color: "blue"};
 
+    function sayColor() {
+        alert(this.color);
+    }
 
+    sayColor(); //"red"
+    o.sayColor = sayColor;
+    o.sayColor(); //"blue"
 
+    //     ECMAScript 5 也规范化了另一个函数对象的属性：caller。
+    //     这个属性中保存着调用当前函数的函数的引用，
+    // 如果是在全局作用域中调用当前函数，它的值为 null。例如：
+    function outer() {
+        inner();
+    }
 
+    function inner() {
+        alert(inner.caller);
+    }
 
+    outer();
+    // 以上代码会导致警告框中显示 outer()函数的源代码。
+    // 因为 outer()调用了 inter()，所以inner.caller 就指向 outer()。
+    // 为了实现更松散的耦合，也可以通过 arguments.callee.caller
+    // 来访问相同的信息。
+    function outer(){
+        inner();
+    }
+    function inner(){
+        alert(arguments.callee.caller);
+    }
+    outer();
 </script>
 </html>
