--- a/es5-javascript高级程序设计（第三版）/5/5.5 Function 类型/5.5.5 函数属性和方法.html
+++ b/es5-javascript高级程序设计（第三版）/5/5.5 Function 类型/5.5.5 函数属性和方法.html
@@ -8,6 +8,20 @@
 
 </body>
 <script>
+    // 每个函数都包含两个属性：length 和 prototype。
+    // 其中，length 函数希望接收 参数的个数
+    function sayName(name){
+        alert(name);
+    }
+    function sum(num1, num2){
+        return num1 + num2;
+    }
+    function sayHi(){
+        alert("hi");
+    }
+    alert(sayName.length); //1
+    alert(sum.length); //2
+    alert(sayHi.length); //0
 
 </script>
 </html>
