alert -> console.log

--- a/es5-javascript高级程序设计（第三版）/5/5.1Object类型/5.1Object类型.html
+++ b/es5-javascript高级程序设计（第三版）/5/5.1Object类型/5.1Object类型.html
@@ -38,7 +38,7 @@
         if(typeof  args.age ==  'number'){
             output+= args.age;
         }
-        alert(output)
+        console.log(output)
     }
 
     displayInfo({
@@ -54,7 +54,7 @@
     //通过[]访问可以包含空格 或属性名中导致语法错误的字符
     person3['first name']  ='wang';
 
-    alert(person3['name']+',[""]访问对象属性'+person[str] +',   person3[\'first name\'] = '+   person3['first name'] )
+    console.log(person3['name']+',[""]访问对象属性'+person[str] +',   person3[\'first name\'] = '+   person3['first name'] )
 
 
 
