--- a/es5-javascript高级程序设计（第三版）/5/5.2Array类型/5.2.9缩小方法.html
+++ b/es5-javascript高级程序设计（第三版）/5/5.2Array类型/5.2.9缩小方法.html
@@ -25,7 +25,7 @@
  //如果是第一次迭代 prev =1 cur = 2
         return prev +cur;//求数组中所有值的和
     });
-    alert(sum);//15
+    console.log(sum);//15
     //reduceRight 作用类似 不过方向相反而已
     var  sum2 = values.reduceRight(function (prev, cur, index, array) {
         //第一次遍历 prev = 5 cur = 4
