--- a/es5-javascript高级程序设计（第三版）/5/5.5 Function 类型/5.5.3 作为值的函数.html
+++ b/es5-javascript高级程序设计（第三版）/5/5.5 Function 类型/5.5.3 作为值的函数.html
@@ -24,12 +24,12 @@ A   ·DOCTYPE html>
         return num + 10;
     }
     var result1 = callSomeFunction(add10, 10);
-    alert(result1); //20
+    console.log(result1); //20
     function getGreeting(name){
         return "Hello, " + name;
     }
     var result2 = callSomeFunction(getGreeting, "Nicholas");
-    alert(result2); //"Hello, Nicholas"
+    console.log(result2); //"Hello, Nicholas"
 
 
 </script>
