--- a/es5-javascript高级程序设计（第三版）/5/5.2Array类型/5.2.2转换方法.html
+++ b/es5-javascript高级程序设计（第三版）/5/5.2Array类型/5.2.2转换方法.html
@@ -9,12 +9,12 @@
 </body>
 <script>
     var colors3 = new Array('red','blue','green');
-    alert(colors3.toString());//red,blue,grenn
-    alert(colors3.valueOf());//red,blue,grenn
-    alert(colors3);//red,blue,grenn
-    alert(colors3.toLocaleString())//大致和toString()一样
+    console.log(colors3.toString());//red,blue,grenn
+    console.log(colors3.valueOf());//red,blue,grenn
+    console.log(colors3);//red,blue,grenn
+    console.log(colors3.toLocaleString())//大致和toString()一样
 
-    alert(colors3.join('|'))
+    console.log(colors3.join('|'))
     //如果数组中的某项值为null或undefined 这些方法返回结果中以空字符串表示
 
 </script>
