--- a/es5-javascript高级程序设计（第三版）/5/5.2Array类型/5.2.5重排序方法.html
+++ b/es5-javascript高级程序设计（第三版）/5/5.2Array类型/5.2.5重排序方法.html
@@ -10,11 +10,11 @@
 <script>
     var values = [0, 1, 5, 10, 15];
     values.reverse();//反转
-    alert(values);//15,10,5,1,0
+    console.log(values);//15,10,5,1,0
 
     values.reverse();
     values.sort();// 根据 字符串 比较结果来排序
-    alert(values);//0,1,10,15,5
+    console.log(values);//0,1,10,15,5
 
     // 升序
     function compare(value1, value2) {
@@ -34,7 +34,7 @@
     }
 
     values.sort(compare);
-    alert(values);//0,1,5,10,15
+    console.log(values);//0,1,5,10,15
 
 
 </script>
