--- a/es5-javascript高级程序设计（第三版）/5/5.2Array类型/5.2.7位置方法.html
+++ b/es5-javascript高级程序设计（第三版）/5/5.2Array类型/5.2.7位置方法.html
@@ -9,15 +9,15 @@
 </body>
 <script>
     var numbers = [1,2,3,4,5,4,3,2,1];
-    alert(numbers.indexOf(4))//3
-    alert(numbers.lastIndexOf(4))//5
-    alert(numbers.indexOf(4,4))// 5 param1 要查找的值 param2 从第几项开始
-    alert(numbers.lastIndexOf(4,4));//3
+    console.log(numbers.indexOf(4))//3
+    console.log(numbers.lastIndexOf(4))//5
+    console.log(numbers.indexOf(4,4))// 5 param1 要查找的值 param2 从第几项开始
+    console.log(numbers.lastIndexOf(4,4));//3
     var person = {name:'wangshaoli'};
     var people  = [{name:'wangshaoli'}];
     var morePeople = [person];
-    alert(people.indexOf(person))//  - 1 未找到
-    alert(morePeople.indexOf(person))//0
+    console.log(people.indexOf(person))//  - 1 未找到
+    console.log(morePeople.indexOf(person))//0
 
 
 
