--- a/es5-javascript高级程序设计（第三版）/5/5.6 基本包装类型/5.6 基本包装类型.html
+++ b/es5-javascript高级程序设计（第三版）/5/5.6 基本包装类型/5.6 基本包装类型.html
@@ -37,7 +37,7 @@
 
     var s1 = "some text";
     s1.color = "red";//创建的String对象 在执行第三行代码时已经被销毁
-    alert(s1.color); //undefined  读取模式 时再次创建对象  而此对象没有color 属性
+    console.log(s1.color); //undefined  读取模式 时再次创建对象  而此对象没有color 属性
 
 
     // 当然，可以显式地调用 Boolean、Number 和 String 来创建基本包装类型的对象。不过，应该在
@@ -47,7 +47,7 @@
 
     //     Object 构造函数也会像工厂方法一样，根据传入值的类型返回相应基本包装类型的实例。例如：
     var obj = new Object("some text");//
-    alert(obj instanceof String); //true
+    console.log(obj instanceof String); //true
 
     // 把字符串传给 Object 构造函数，就会创建 String 的实例；而传入数值参数会得到 Number 的实
     // 例，传入布尔值参数就会得到 Boolean 的实例。
@@ -58,9 +58,9 @@
 
     var value = "25";
     var number = Number(value); //转型函数
-    alert(typeof number); //"number"
+    console.log(typeof number); //"number"
     var obj = new Number(value); //构造函数
-    alert(typeof obj); //"object"
+    console.log(typeof obj); //"object"
     // 在这个例子中，变量 number 中保存的是基本类型的值 25，而变量 obj 中保存的是 Number 的实
     // 例。要了解有关转型函数的更多信息，请参考第 3 章。
 
