基本包装类型

--- a/es5-javascript高级程序设计（第三版）/5/5.6 基本包装类型/5.6.1 Boolean类型.html
+++ b/es5-javascript高级程序设计（第三版）/5/5.6 基本包装类型/5.6.1 Boolean类型.html
@@ -18,18 +18,18 @@
     //         其中最常见的问题就是在布尔表达式中使用 Boolean 对象，例如：
     var falseObject = new Boolean(false);
     var result = falseObject && true;   //falseObject 是 object 所以 true
-    alert(result); //true
+    console.log(result); //true
     var falseValue = false;
     result = falseValue && true;
-    alert(result); //false
+    console.log(result); //false
 
     //     本类型与引用类型的布尔值还有两个区别。首先，typeof 操作符对基本类型返回"boolean"，
     // 而对引用类型返回"object"。其次，由于 Boolean 对象是 Boolean 类型的实例，所以使用 instanceof
     //     操作符测试 Boolean 对象会返回 true，而测试基本类型的布尔值则返回 false。例如：
-    alert(typeof falseObject); //object
-    alert(typeof falseValue); //boolean
-    alert(falseObject instanceof Boolean); //true
-    alert(falseValue instanceof Boolean); //false
+    console.log(typeof falseObject); //object
+    console.log(typeof falseValue); //boolean
+    console.log(falseObject instanceof Boolean); //true
+    console.log(falseValue instanceof Boolean); //false
     // 理解基本类型的布尔值与 Boolean 对象之间的区别非常重要——当然，建议是永远不要使
     // 用 Boolean 对象。
 </script>
