--- a/es5-javascript高级程序设计（第三版）/5/5.2Array类型/5.2.3 4栈、队列方法.html
+++ b/es5-javascript高级程序设计（第三版）/5/5.2Array类型/5.2.3 4栈、队列方法.html
@@ -8,7 +8,7 @@
 
 </body>
 <script>
-    //栈相关
+    //栈相关 先进后出
     var colors = new Array();
     var count  =  colors.push('red','green') // count  = 2
     count = colors.push('black')//3
