--- a/es5-javascript高级程序设计（第三版）/7/7.2闭包closure.html
+++ b/es5-javascript高级程序设计（第三版）/7/7.2闭包closure.html
@@ -9,6 +9,12 @@
 </body>
     <script>
 
+        //闭包： 指有权访问另一个函数作用域中的变量的函数。
+
+
+        // 常见创建方式
+
+        // 1. 在一个函数内部创建另一个函数
         function f1(propertyName) {
             return function (object1, object2) {
 
