--- a/es5-javascript高级程序设计（第三版）/7/7.2闭包closure.html
+++ b/es5-javascript高级程序设计（第三版）/7/7.2闭包closure.html
@@ -16,11 +16,14 @@
 
         // 1. 在一个函数内部创建另一个函数
         function f1(propertyName) {
-            return function (object1, object2) {
+            return function (object1, object2) { //内部函数    它是一个匿名函数
+                let value1 = object1[propertyName]; //访问外部函数中的变量propertyName
+                let value2 = object2[propertyName];//访问外部函数中的变量propertyName
+                //这个内部函数被返回了，且在其他地方被调用，它仍然可以访问变量propertyName
+                //原因是 内部函数的作用域链中包含了 f1()的作用域。要彻底搞清楚其中细节，必须
+                //从函数被调用的时候会发生什么入手。
 
 
-                let value1 = object1[propertyName];
-                let value2 = object2[propertyName];
                 if(value1<value2){
                     return -1;
 
@@ -32,6 +35,9 @@
 
             }
         }
+
+        //当某个函数被调用时，会创建一个执行环境（execution context）及相应的作用域链。
+        //然后，使用 arguments 和其他命名参数的值来初始化函数的活动对象（activation object）。
 
     </script>
 </html>
