--- a/es5-javascript高级程序设计（第三版）/7/7.2闭包closure.html
+++ b/es5-javascript高级程序设计（第三版）/7/7.2闭包closure.html
@@ -9,7 +9,25 @@
 </body>
     <script>
 
-        //闭包： 指有权访问另一个函数作用域中的变量的函数。
+        //闭包： 闭包可以让你从内部函数访问外部函数作用域。
+        // 在 JavaScript 中，每当函数被创建，就会在函数生成时生成闭包。
+
+        function init() {
+            var name = "Mozilla"; // name 是一个被 init 创建的局部变量
+            function displayName() { // displayName() 是内部函数，一个闭包
+                alert(name); // 使用了父函数中声明的变量
+            }
+            displayName();
+        }
+        init();
+        //init() 创建了一个局部变量 name 和一个名为 displayName() 的函数。
+        //displayName() 是定义在 init() 里的内部函数，并且仅在 init() 函数体内可用。
+        //displayName() 函数alert()显示了变量name的值（该变量在其父函数中声明）
+
+        //扩展：这个词法作用域的例子描述了分析器如何在函数嵌套的情况下解析变量名。
+        
+
+
 
 
         // 常见创建方式
