async await  debounce thrittling

--- a/es5-javascript高级程序设计（第三版）/5/5.2Array类型/5.2.0Array类型.html
+++ b/es5-javascript高级程序设计（第三版）/5/5.2Array类型/5.2.0Array类型.html
@@ -24,7 +24,7 @@
     var values=[1,2,] ;//别这样  会创建 2 or 3 项的数组  ie实现与其他浏览器不一致
     var options = [, , , , ,];//别这样  会创建 5 or 6 项的数组 ie实现与其他浏览器不一致
 
-    console.log(colors5[0]);
+    console.log('colors5[0]='+colors5[0]); // red
     colors5[3] = 'brown' //新增第4项  原来数组只有3项，此操作会只 colors5 长度+1
     var names2 =[]; //names2.length = 0
 
