--- a/es5-javascript高级程序设计（第三版）/7/7.2闭包closure.html
+++ b/es5-javascript高级程序设计（第三版）/7/7.2闭包closure.html
@@ -12,6 +12,38 @@
         //闭包： 闭包可以让你从内部函数访问外部函数作用域。
         // 在 JavaScript 中，每当函数被创建，就会在函数生成时生成闭包。
 
+
+        // 常见创建方式
+
+        // 1. 在一个函数内部创建另一个函数
+        function f1(propertyName) {
+            return function (object1, object2) { //内部函数    它是一个匿名函数
+                let value1 = object1[propertyName]; //访问外部函数中的变量propertyName
+                let value2 = object2[propertyName];//访问外部函数中的变量propertyName
+                //这个内部函数被返回了，且在其他地方被调用，它仍然可以访问变量propertyName
+                //原因是 内部函数的作用域链中包含了 f1()的作用域。要彻底搞清楚其中细节，必须
+                //从函数被调用的时候会发生什么入手。
+
+                if(value1<value2){
+                    return -1;
+
+                }else if(value1>value2){
+                    return 1;
+                }else {
+                    return 0;
+                }
+            }
+        }
+
+        // 作用域链 概念
+
+        //当某个函数被调用时，会创建一个执行环境（execution context）及相应的作用域链。
+        //然后，使用 arguments 和其他 命名参数 的值来初始化函数的活动对象（activation object）。
+
+
+
+
+        // mdn 的例子   //////////////////////////////////////////////////////////////////////////////////////////
         function init() {
             var name = "Mozilla"; // name 是一个被 init 创建的局部变量
             function displayName() { // displayName() 是内部函数，一个闭包
@@ -25,37 +57,7 @@
         //displayName() 函数alert()显示了变量name的值（该变量在其父函数中声明）
 
         //扩展：这个词法作用域的例子描述了分析器如何在函数嵌套的情况下解析变量名。
-        
 
-
-
-
-        // 常见创建方式
-
-        // 1. 在一个函数内部创建另一个函数
-        function f1(propertyName) {
-            return function (object1, object2) { //内部函数    它是一个匿名函数
-                let value1 = object1[propertyName]; //访问外部函数中的变量propertyName
-                let value2 = object2[propertyName];//访问外部函数中的变量propertyName
-                //这个内部函数被返回了，且在其他地方被调用，它仍然可以访问变量propertyName
-                //原因是 内部函数的作用域链中包含了 f1()的作用域。要彻底搞清楚其中细节，必须
-                //从函数被调用的时候会发生什么入手。
-
-
-                if(value1<value2){
-                    return -1;
-
-                }else if(value1>value2){
-                    return 1;
-                }else {
-                    return 0;
-                }
-
-            }
-        }
-
-        //当某个函数被调用时，会创建一个执行环境（execution context）及相应的作用域链。
-        //然后，使用 arguments 和其他命名参数的值来初始化函数的活动对象（activation object）。
 
     </script>
 </html>
