--- a/es6demo/promise.html
+++ b/es6demo/promise.html
@@ -8,6 +8,21 @@
 
 </body>
 <script>
+    var str= 'data:image/png;base64,sdfsdf'
+    var index = str.indexOf(',')
+    console.log(str.substring(index+1))
+
+   // console.log('date='+date+',week='+week)
+    // //获取域名 window.location 类
+    // host = window.location.host;
+    // host2=document.domain;
+    //
+    // //获取页面完整地址
+    // url = window.location.href;
+    //
+    // document.write("<br>host="+host)
+    // document.write("<br>host2="+host2)
+    // document.write("<br>url="+url)
     const promise=new Promise(function (resolve, reject) {
         console.log('11111')
         resolve();
