--- a/base/css/transform/translate.html
+++ b/base/css/transform/translate.html
@@ -112,6 +112,9 @@
     translateZ三维 属性 <br/>
     translateZ(100px) 括号中的 值小离视点近（物体看起来感觉大） 值大离视点远（物体看起来小） <br/>
     3维属性在二维平面 需要设置 视点 来体现三维世界中的 近大远小 通过 perspective 属性在父元素上设置视点
+    <img src="img/small.png" alt="远小"/>
+    <img src="img/big.png" alt="进大" />
+    <br />
     perspective:200px; 正中心 200px 为 视点
     X 横<br/>
     Y 纵<br/>
