--- a/base/css/heart/animation.html
+++ b/base/css/heart/animation.html
@@ -20,11 +20,17 @@
         position: relative;
         margin: 200px;
         display: inline-block;
+        animation: scale 1s infinite alternate ;
     }
 
-    .heart:hover {
-        transform: scale(1.2);
-    }
+   @keyframes scale {
+       0% {
+           transform: scale(1);
+       }
+       100% {
+           transform: scale(1.3);
+       }
+   }
 
     .left {
         border:  1px solid red;
@@ -70,11 +76,11 @@
 
 </style>
 <body>
-    <div class="heart ">
-        <div class="left"></div>
-        <div class="right"></div>
-        <div class="bottom"></div>
-    </div>
+<div class="heart ">
+    <div class="left"></div>
+    <div class="right"></div>
+    <div class="bottom"></div>
+</div>
 
 </body>
 </html>
